--- a/public/css/adicionarUsuario.css
+++ b/public/css/adicionarUsuario.css
@@ -228,3 +228,22 @@ h1 {
     margin-top: 10%;
     cursor: pointer;
 }
+
+#sair {
+    position: absolute;
+    font-family: "Inter", sans-serif;
+    font-weight: 350;
+    font-size: 3.2vh;
+    height: 5vh;
+    width: 5vw;
+    border-radius: 0.6vh;
+    border: 0;
+    background-color: #D61717;
+    color: white;
+    padding-left: 2%;
+    padding-top: 0.5%;
+    text-decoration: none;
+    margin-left: 91%;
+    margin-top: 1%;
+    cursor: pointer;
+}
