--- a/public/css/financeiro.css
+++ b/public/css/financeiro.css
@@ -11,11 +11,11 @@ body {
 }
 
 /* CABEÇALHO */
-.texto-nav{
+.texto-nav {
     color: #FFCC00;
 }
 
-.sidebar ul li #finan{
+.sidebar ul li #finan {
     color: #FFCC00;
 
     & .financial {
@@ -28,12 +28,12 @@ body {
     }
 }
 
-.financeiro{
+.financeiro {
     background-color: #000;
 }
 
 
-#formPesquisa{
+#formPesquisa {
     display: flex;
     flex-direction: row;
 }
@@ -43,58 +43,64 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1rem; /* Espaçamento entre os elementos */
-    padding: 1rem; /* Espaço interno */
+    gap: 1rem;
+    /* Espaçamento entre os elementos */
+    padding: 1rem;
+    /* Espaço interno */
     background-color: white;
     border-radius: 1vh;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1); /* Sombra leve */
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+    /* Sombra leve */
 }
 
 /* Botão Filtrar */
 #filtrarcontainer {
     display: flex;
     align-items: center;
-    gap: 0.5rem; /* Espaçamento entre o botão e a barra de pesquisa */
+    gap: 0.5rem;
+    /* Espaçamento entre o botão e a barra de pesquisa */
 }
 
 /* --------------------Filtro--------------------- */
 
 #filtrar {
     /* ----------------------------------------- */
-        height: 5.5vh;
-        width: 8.2vw;
+    height: 5.5vh;
+    width: 8.2vw;
     /* ----------------------------------------- */
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
     /* ----------------------------------------- */
-        padding-left: 0.5%; 
-        margin-right: 1%;
+    padding-left: 0.5%;
+    margin-right: 1%;
     /* ----------------------------------------- */
-        font-family: "Inter", sans-serif;
-        font-size: clamp(2vh,1.25vw,3vh); 
+    font-family: "Inter", sans-serif;
+    font-size: clamp(2vh, 1.25vw, 3vh);
     /* ----------------------------------------- */
-        background-color: white;
-        border-radius: 1.3vh;
-        cursor: pointer;
-        border: transparent;
-        box-shadow: 0.1vw 0.3vh 0.4vw 0.1vw rgba(0, 0, 0, 0.2);
-    }
-    
-    #fil {
+    background-color: white;
+    border-radius: 1.3vh;
+    cursor: pointer;
+    border: transparent;
+    box-shadow: 0.1vw 0.3vh 0.4vw 0.1vw rgba(0, 0, 0, 0.2);
+}
+
+#fil {
     /* ----------------------------------------- */
-        height: 70%;
+    height: 70%;
     /* ----------------------------------------- */
-        background-color: white;
-    }
-    
-    #filtrar:hover {
-        transform: scale(1.03); 
-    }
-    
-    textarea:focus, input:focus, select:focus {
-        outline: 0;
-    }
+    background-color: white;
+}
+
+#filtrar:hover {
+    transform: scale(1.03);
+}
+
+textarea:focus,
+input:focus,
+select:focus {
+    outline: 0;
+}
 
 /* Barra de entrada */
 #entrada {
@@ -108,20 +114,72 @@ body {
 }
 
 /* Botão Pesquisar */
+#pesquisa {
+    /* ----------------------------------------- */
+        height: 5.4vh;
+        width: 55.10vw;
+    /* ----------------------------------------- */
+    
+        padding-left: 0.5%;
+    /* ----------------------------------------- */
+        font-family: "Inter", sans-serif;
+        font-size: clamp(2.25vh,1.5vw,3.25vh); 
+    /* ----------------------------------------- */
+        background-color: white;
+        border-radius: 1.3vh;
+        cursor: pointer;
+        border: transparent;
+        box-shadow: 0.1vw 0.3vh 0.4vw 0.1vw rgba(0, 0, 0, 0.2);
+    
+    }
+    
+    textarea:focus, input:focus, select:focus {
+        outline: 0;
+    }
+
 #pesquisar {
+    /* ----------------------------------------- */
+    height: 5.5vh;
+    width: 10.7vw;
+    /* ----------------------------------------- */
     display: flex;
+    justify-content: space-evenly;
     align-items: center;
-    justify-content: center;
-    height: 4vh;
-    width: auto; /* Ajuste automático ao conteúdo */
-    padding: 0.5rem 1rem;
-    background-color: #fff;
-    border-radius: 1vh;
-    border: 1px solid #ccc;
-    box-shadow: 0.1em 0.1em;
-    font-weight: 300;
+    /* ----------------------------------------- */
+    padding-left: 0.5%;
+    margin-left: 1%;
+    /* ----------------------------------------- */
+    font-family: "Inter", sans-serif;
+    font-size: clamp(2vh, 1.25vw, 3vh);
+    /* ----------------------------------------- */
+    background-color: white;
+    border-radius: 1.3vh;
     cursor: pointer;
+    border: transparent;
+    box-shadow: 0.1vw 0.3vh 0.4vw 0.1vw rgba(0, 0, 0, 0.2);
 }
+
+#pes {
+    /* ----------------------------------------- */
+    height: 50%;
+    /* ----------------------------------------- */
+    background-color: white;
+}
+
+#pesquisar:hover {
+    transform: scale(1.03);
+}
+
+textarea:focus,
+input:focus,
+select:focus {
+    outline: 0;
+}
+
+#formPesquisa #pesquisa::placeholder {
+    font-size: 2.7vh;
+    padding: 1.2vh;
+  }
 
 /* Dropdowns nos filtros */
 select {
@@ -134,7 +192,8 @@ select {
     border: none;
     border-radius: 0.5vh;
     cursor: pointer;
-    appearance: none; /* Remove a seta padrão */
+    appearance: none;
+    /* Remove a seta padrão */
 }
 
 /* Estilo dos campos de data */
@@ -150,9 +209,11 @@ select {
 
 /* Alinhamento do container dos filtros */
 #caixote {
-    display: none; /* Inicialmente escondido */
+    display: none;
+    /* Inicialmente escondido */
     position: absolute;
-    top: 50px; /* Ajuste para aparecer abaixo do botão Filtrar */
+    top: 50px;
+    /* Ajuste para aparecer abaixo do botão Filtrar */
     width: 20vw;
     background-color: #fff;
     border: 1px solid #ccc;
@@ -167,19 +228,22 @@ select {
     display: block;
 }
 
-#ajeitar{
+#ajeitar {
     display: flex;
     flex-direction: column;
 }
-#subajeitada{
+
+#subajeitada {
     display: flex;
     justify-items: center;
     justify-content: space-around;
     margin-top: 5%;
 }
-#textinho{
+
+#textinho {
     color: #FFCC00;
 }
+
 #dropdown {
     display: none;
     position: relative;
@@ -206,7 +270,8 @@ select {
     background-color: #FFCC00;
     border-color: transparent;
     border-radius: 0.5vh;
-    appearance: none; /* remove a seta padrao do select */
+    appearance: none;
+    /* remove a seta padrao do select */
     cursor: pointer;
 }
 
@@ -232,11 +297,12 @@ select:hover option:hover {
     background-color: #eaeaea;
 }
 
-#inputdata{
+#inputdata {
     margin-top: 5%;
     margin-left: 10%;
 }
-.datasize{
+
+.datasize {
     width: 6vw;
     height: 4vh;
     margin-right: 2%;
@@ -247,14 +313,14 @@ select:hover option:hover {
     border-radius: 1vh;
 }
 
-#ordernaritem{
+#ordernaritem {
     margin-top: 5%;
     margin-left: 10%;
 }
 
 /* acabou mudanças */
 #entrada {
-    
+
     z-index: 1;
     width: 40vw;
     height: 4vh;
@@ -266,30 +332,19 @@ select:hover option:hover {
 }
 
 #entrada::placeholder {
-    color: #FFCC00; /* Cor do placeholder */
-    font-size: 2.5vh; /* Tamanho da fonte do placeholder */
-    opacity: 1; /* Garante visibilidade */
+    color: #FFCC00;
+    /* Cor do placeholder */
+    font-size: 2.5vh;
+    /* Tamanho da fonte do placeholder */
+    opacity: 1;
+    /* Garante visibilidade */
 }
-#entrada:focus, #entrada:focus, #entradao:focus {
+
+#entrada:focus,
+#entrada:focus,
+#entradao:focus {
     outline: 0;
 }
-
-#pesquisar {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 4vh;
-    width: 8vw;
-    background-color: #ffff;
-    border-radius: 1vh;
-    box-shadow: 0.1em 0.1em;
-    border: 1px solid #ccc; /* Borda para consistência */
-    font-weight: 300;
-    cursor: pointer;
-}
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 #caixa-recebimento {
     width: 9vh;
@@ -305,12 +360,12 @@ select:hover option:hover {
     justify-content: center;
     align-items: center;
     margin-top: 60vh;
-    margin-right:16vh ;
+    margin-right: 16vh;
     justify-self: right;
 
 }
 
-#caixa-recebimento:hover{
+#caixa-recebimento:hover {
     background-color: White;
     color: #FFCC00;
 
@@ -337,7 +392,7 @@ select:hover option:hover {
     z-index: 99999;
 }
 
-#formContainer h2{
+#formContainer h2 {
     padding-top: 2vh;
     padding-bottom: 2vh;
     justify-self: center;
@@ -386,8 +441,8 @@ select:hover option:hover {
     z-index: 911199;
 }
 
-#registrationForm input:focus + label,
-#registrationForm input:not(:placeholder-shown) +  label {
+#registrationForm input:focus+label,
+#registrationForm input:not(:placeholder-shown)+label {
     top: -1vh;
     font-size: 15px;
     color: #FFCC00;
@@ -416,7 +471,7 @@ select:hover option:hover {
     z-index: 999;
 }
 
-#submitButton h3{
+#submitButton h3 {
     align-self: center;
     justify-content: center;
     margin-left: 5.7vh;
@@ -424,12 +479,12 @@ select:hover option:hover {
 }
 
 #submitButton:hover {
-    border-color:#FFCC00 ;
+    border-color: #FFCC00;
     border-style: solid;
     border-width: 0.2493vh;
     color: #FFCC00;
     background-color: white;
-    transition: 0.2s  ease;
+    transition: 0.2s ease;
     z-index: 999;
 }
 
@@ -443,25 +498,26 @@ select:hover option:hover {
     margin: 0 auto;
     padding: 20px;
     border-radius: 8px;
-  }
-  #btn-recebim{
+}
+
+#btn-recebim {
     text-decoration: none;
     width: 19vh;
     height: 9vh;
-    border-radius:1.2vh ;
+    border-radius: 1.2vh;
     border: #FFCC00;
     font-size: 2.5vh;
     font-weight: 600;
     color: white;
     background-color: #FFCC00;
-  }
+}
 
 
-  #btn-saida{
+#btn-saida {
     text-decoration: none;
     width: 19vh;
     height: 9vh;
-    border-radius:1.2vh ;
+    border-radius: 1.2vh;
     border-style: solid;
     border-color: #FFCC00;
     border-width: 0.22vw;
@@ -469,13 +525,13 @@ select:hover option:hover {
     font-weight: 600;
     color: #FFCC00;
     background-color: WHIte;
-  }
+}
 
-  #btn-saldo{
+#btn-saldo {
     text-decoration: none;
     width: 19vh;
     height: 9vh;
-    border-radius:1.2vh ;
+    border-radius: 1.2vh;
     border-style: solid;
     border-color: #FFCC00;
     border-width: 0.22vw;
@@ -483,38 +539,43 @@ select:hover option:hover {
     font-weight: 600;
     color: #FFCC00;
     background-color: white;
-  }
+}
 
-  #btn-saida:hover, #btn-saldo:hover{
+#btn-saida:hover,
+#btn-saldo:hover {
     border-style: solid;
     border-color: #FFCC00;
     border-width: 0.27vw;
     background-color: #FFCC00;
     color: white;
     cursor: pointer;
-  }
+}
 
 
 
-  #toggle-filter {
-    
+#toggle-filter {
+
     display: flex;
     width: 100%;
     justify-self: center;
-    padding: 10px 20px;
     font-size: 16px;
     font-weight: 520;
     height: auto;
     color: #FFCC00;
     margin-top: -65.7vh;
     cursor: pointer;
-    justify-content: center; /* Centraliza os elementos horizontalmente */
-    align-items: center; /* Alinha os elementos verticalmente */
-    gap: 0.5%; /* Espaçamento entre os itens */
-    padding: 0; /* Remove preenchimentos extras */
-    border-radius: 1vh; /* Bordas arredondadas */
- 
-    
+    justify-content: center;
+    /* Centraliza os elementos horizontalmente */
+    align-items: center;
+    /* Alinha os elementos verticalmente */
+    gap: 0.5%;
+    /* Espaçamento entre os itens */
+    padding: 0;
+    /* Remove preenchimentos extras */
+    border-radius: 1vh;
+    /* Bordas arredondadas */
+    margin-top: -69vh;
+
 }
 
 
@@ -538,27 +599,27 @@ select:hover option:hover {
     display: flex;
     z-index: 1;
     margin-top: 2vh;
-    margin-bottom:1.5vh ;
+    margin-bottom: 1.5vh;
     justify-self: center;
     align-items: center;
     width: 100%;
     max-width: 800px;
-  }
-  
-  .title {
+}
+
+.title {
     white-space: nowrap;
     margin-right: 1vh;
     font-size: larger;
-  }
-  
-  .divider {
+}
+
+.divider {
     flex-grow: 2;
-    border-top: 0.7vh dashed #000;
+    border-top: 0.4vh dashed #000;
     width: 300vh;
-  }
+}
 
 /* ------------------------Recebimentos------------------- */
-.tabela-recebimentos{
+.tabela-recebimentos {
     display: flex;
     width: auto;
     justify-content: center;
@@ -570,54 +631,63 @@ select:hover option:hover {
     width: 100%;
     max-width: 800px;
     margin-top: auto;
-    overflow-y: auto; /* ativa o scroll vertical */
-    overflow-x: hidden; /* desativa o scroll horizontal */
-    height: 60vh;
+    overflow-y: auto;
+    /* ativa o scroll vertical */
+    overflow-x: hidden;
+    /* desativa o scroll horizontal */
+    height: 55.5vh;
     padding-right: 1vw;
 }
 
-.linhaPrincipal{
+.linhaPrincipal {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
     padding: 0.7vh;
     gap: 5vh;
 }
+
 .table-container::-webkit-scrollbar {
-    width: 0.6vw; /* largura da barra */
-  }
-  
+    width: 0.6vw;
+    /* largura da barra */
+}
+
 .table-container::-webkit-scrollbar-thumb {
     width: 2vw;
-    background: #FFCC00; /* cor do "polegar" da barra */
-    border-radius: 2vw; /* arredondamento */
-  }
-  
-.table-container::-webkit-scrollbar-thumb:hover {
-    background: #c8a001; /* cor ao passar o mouse */
-  }
+    background: #FFCC00;
+    /* cor do "polegar" da barra */
+    border-radius: 2vw;
+    /* arredondamento */
+}
 
-.produtos{
+.table-container::-webkit-scrollbar-thumb:hover {
+    background: #c8a001;
+    /* cor ao passar o mouse */
+}
+
+.produtos {
     margin-bottom: 1.9vh;
     gap: 5vh;
 
 }
+
 .row {
     display: flex;
     justify-content: space-between;
     align-items: center;
     border: 1px solid #FFCC00;
-    border-radius:0.5vw;
+    border-radius: 0.5vw;
     padding: 15px 20px;
     cursor: pointer;
     background-color: #fafafa;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    margin-bottom: 5px; /* Adiciona um pequeno espaçamento entre as linhas principais */
+    margin-bottom: 5px;
+    /* Adiciona um pequeno espaçamento entre as linhas principais */
 }
-    
+
 
 .cell {
-    display:flex;
+    display: flex;
     flex-direction: column;
     text-align: left;
     color: black;
@@ -687,4 +757,16 @@ select:hover option:hover {
 
 .detail-item span {
     color: #888;
+}
+
+/* FOOTER */
+.footer {
+    display: flex;
+    justify-content: center;
+    margin-top: 3vh;
+}
+
+.footer img {
+    height: auto;
+    width: 35vh;
 }
