--- a/views/cadastro3.ejs
+++ b/views/cadastro3.ejs
@@ -131,9 +131,9 @@
                     <form id="formAdicionarProduto" action="/cadastro/cadastro3" method="POST">
                         <div class="Categoria">
                             <h1>Categoria</h1>
-                            <div class="caixaTexto">
+                            <!-- <div class="caixaTexto">
                                 <input id="categoria" name="categoria" type="text" placeholder="Categoria" required>
-                            </div>
+                            </div> -->
                             <div class="caixaTexto">
                                 <input id="rua" name="rua" type="text" placeholder="Rua" required>
                             </div>
@@ -209,41 +209,9 @@
         });
 
 
-        document.getElementById('formAdicional').addEventListener('submit', async function (event) {
-            event.preventDefault();
-
-            const usuarioLogado = JSON.parse(localStorage.getItem('usuarioLogado'));
-            const SNProfessor = localStorage.getItem('SNProfessor');
-
-            const produto = {
-                codigo: document.getElementById('codigo').value,
-                nomebasico: document.getElementById('nomebasico').value,
-                nomeModificador: document.getElementById('nomemodificador').value,
-                descricao: document.getElementById('descricao').value,
-                inseridoPor: usuarioLogado.tipo === 'professor' ? SNProfessor : usuarioLogado.email,
-            };
-
-            try {
-                const response = await fetch('http://localhost:3000/adicionar-produto', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify(produto),
-                });
-
-                if (response.ok) {
-                    alert('Produto cadastrado com sucesso!');
-                } else {
-                    const errorMessage = await response.text();
-                    alert('Erro: ' + errorMessage);
-                }
-            } catch (error) {
-                alert('Erro ao cadastrar produto: ' + error.message);
-            }
-        });
-
     </script>
 
-    <script src="js/navbar.js"></script>
+    <script src="/js/navbar.js"></script>
 </body>
 
 </html>
