--- a/views/cadastro4.ejs
+++ b/views/cadastro4.ejs
@@ -208,41 +208,9 @@
         });
 
 
-        document.getElementById('formAdicional').addEventListener('submit', async function (event) {
-            event.preventDefault();
-
-            const usuarioLogado = JSON.parse(localStorage.getItem('usuarioLogado'));
-            const SNProfessor = localStorage.getItem('SNProfessor');
-
-            const produto = {
-                codigo: document.getElementById('codigo').value,
-                nomebasico: document.getElementById('nomebasico').value,
-                nomeModificador: document.getElementById('nomemodificador').value,
-                descricao: document.getElementById('descricao').value,
-                inseridoPor: usuarioLogado.tipo === 'professor' ? SNProfessor : usuarioLogado.email,
-            };
-
-            try {
-                const response = await fetch('http://localhost:3000/adicionar-produto', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify(produto),
-                });
-
-                if (response.ok) {
-                    alert('Produto cadastrado com sucesso!');
-                } else {
-                    const errorMessage = await response.text();
-                    alert('Erro: ' + errorMessage);
-                }
-            } catch (error) {
-                alert('Erro ao cadastrar produto: ' + error.message);
-            }
-        });
-
     </script>
 
-    <script src="js/navbar.js"></script>
+    <script src="/js/navbar.js"></script>
 </body>
 
 </html>
