--- a/public/css/financeiro.css
+++ b/public/css/financeiro.css
@@ -362,6 +362,7 @@ select:hover option:hover {
     margin-top: 60vh;
     margin-right: 16vh;
     justify-self: right;
+    padding-bottom: 0.5%;
 
 }
 
@@ -378,25 +379,33 @@ select:hover option:hover {
     justify-self: center;
     align-self: center;
     z-index: 999;
-    position: relative;
+    position: absolute;
     padding-bottom: 20px;
     font-family: 'poppins', sans-serif;
     border: 1px solid #ccc;
     border-radius: 5px;
-    background-color: #f9f9f9;
+    background-color: white;
     align-self: center;
     justify-self: center;
     max-width: 450px;
     width: 100%;
-    margin-top: -70vh;
+    margin-top: -72vh;
     z-index: 99999;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+    margin-left: 38%;
+
+}
+
+#formContainer #close-btn{
+    color: #000;
 }
 
 #formContainer h2 {
     padding-top: 2vh;
     padding-bottom: 2vh;
     justify-self: center;
-    font-size: 4vh;
+    font-size: 3.6vh;
+    font-weight: 450;
     z-index: 9911119;
 }
 
@@ -418,7 +427,8 @@ select:hover option:hover {
     font-family: 'poppins', sans-serif;
     border: 1px solid #ccc;
     border-radius: 5px;
-    background-color: #fff;
+    background-color: white;
+    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
     outline: none;
     z-index: 9911119;
 }
@@ -426,6 +436,7 @@ select:hover option:hover {
 #registrationForm input:focus {
     border-color: #FFCC00;
     z-index: 911199;
+    box-shadow: 1px 1px 1px 1px #e2b500;
 }
 
 /* Estilos das labels */
@@ -434,7 +445,6 @@ select:hover option:hover {
     top: 50%;
     left: 4.4vw;
     transform: translateY(-50%);
-    font-family: 'poppins', sans-serif;
     font-size: 16px;
     color: #999;
     transition: all 0.3s ease;
@@ -444,9 +454,10 @@ select:hover option:hover {
 #registrationForm input:focus+label,
 #registrationForm input:not(:placeholder-shown)+label {
     top: -1vh;
+    left: 3.3vw;
     font-size: 15px;
     color: #FFCC00;
-    font-family: 'poppins', sans-serif;
+    font-weight: 430;
     z-index: 991119;
 }
 
@@ -479,11 +490,7 @@ select:hover option:hover {
 }
 
 #submitButton:hover {
-    border-color: #FFCC00;
-    border-style: solid;
-    border-width: 0.2493vh;
-    color: #FFCC00;
-    background-color: white;
+    transform: scale(1.06);
     transition: 0.2s ease;
     z-index: 999;
 }
