--- a/views/cadastro1.ejs
+++ b/views/cadastro1.ejs
@@ -42,7 +42,7 @@
 
 
                 <li class="cadastrar">
-                    <a href="/cadastro1.html" id="cadas">
+                    <a href="cadastro1" id="cadas">
                         <div class="box-of-good-good"></div>
                         <span>Cadastrar</span>
                     </a>
