--- a/views/cadastro2.ejs
+++ b/views/cadastro2.ejs
@@ -42,7 +42,7 @@
 
 
                 <li class="cadastrar">
-                    <a href="/cadastro1.html" id="cadas">
+                    <a href="cadastro1" id="cadas">
                         <div class="box-of-good-good"></div>
                         <span>Cadastrar</span>
                     </a>
@@ -112,7 +112,7 @@
                 </div>
 
                 <div class="caixa-aberta">
-                    <img src="imgCADASTRO/CaixaAberta.svg" alt="">
+                    <img src="/imgCADASTRO/CaixaAberta.svg" alt="">
                 </div>
             </div>
 
@@ -153,14 +153,19 @@
                             </div>
                         </div>
                         <div class="setas">
-                            <button type="submit" id="direita"><img src="/imgCADASTRO/setaDIREITA.svg" alt=""></button>
+                            <button type="button" id="esquerda" onclick="location.href='cadastro1';">
+                                <img src="/imgCADASTRO/setaESQUERDA.svg" alt="">
+                            </button>
+                            <button type="submit" id="direita">
+                                <img src="/imgCADASTRO/setaDIREITA.svg" alt="">
+                            </button>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
         <div class="footer">
-            <img src="imgCADASTRO/gatinhoRodapé.svg" alt="">
+            <img src="/imgCADASTRO/gatinhoRodapé.svg" alt="">
         </div>
         </div>
     </section>
