--- a/views/cadastro4.ejs
+++ b/views/cadastro4.ejs
@@ -42,7 +42,7 @@
 
 
                 <li class="cadastrar">
-                    <a href="/cadastro1.html" id="cadas">
+                    <a href="cadastro1" id="cadas">
                         <div class="box-of-good-good"></div>
                         <span>Cadastrar</span>
                     </a>
@@ -145,7 +145,7 @@
                         </div>
 
                         <div class="setas">
-                            <button type="button" id="esquerda" onclick="location.href='/cadastro3.html';">
+                            <button type="button" id="esquerda" onclick="location.href='cadastro3';">
                                 <img src="/imgCADASTRO/setaESQUERDA.svg" alt="">
                             </button>
                             <button type="submit" id="direita">
