--- a/public/css/catalogo.css
+++ b/public/css/catalogo.css
@@ -93,44 +93,45 @@ select:focus {
 }
 
 
-#codigo {
+#pesquisa {
     /* ----------------------------------------- */
-    height: 5.4vh;
-    width: 55.10vw;
+        height: 5.4vh;
+        width: 55.10vw;
     /* ----------------------------------------- */
-
-    padding-left: 0.5%;
-    /* ----------------------------------------- */
-    font-family: "Inter", sans-serif;
-    font-size: clamp(2.25vh, 1.5vw, 3.25vh);
-    /* ----------------------------------------- */
-    background-color: white;
-    border-radius: 1.3vh;
-    cursor: pointer;
-    border: transparent;
-    box-shadow: 0.1vw 0.3vh 0.4vw 0.1vw rgba(0, 0, 0, 0.2);
-}
-
-#pesquisar {
-    /* ----------------------------------------- */
-        height: 5.5vh;
-        width: 10.7vw;
-    /* ----------------------------------------- */
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-    /* ----------------------------------------- */
-        padding-left: 0.5%; 
-        margin-left: 1%;
+    
+        padding-left: 0.5%;
     /* ----------------------------------------- */
         font-family: "Inter", sans-serif;
-        font-size: clamp(2vh,1.25vw,3vh); 
+        font-size: clamp(2.25vh,1.5vw,3.25vh); 
     /* ----------------------------------------- */
         background-color: white;
         border-radius: 1.3vh;
         cursor: pointer;
         border: transparent;
         box-shadow: 0.1vw 0.3vh 0.4vw 0.1vw rgba(0, 0, 0, 0.2);
+    
+    }
+
+#pesquisar {
+  /* ----------------------------------------- */
+  height: 5.5vh;
+  width: 10.7vw;
+/* ----------------------------------------- */
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+/* ----------------------------------------- */
+  padding-left: 0.5%; 
+  margin-left: 1%;
+/* ----------------------------------------- */
+  font-family: "Inter", sans-serif;
+  font-size: clamp(2vh,1.25vw,3vh); 
+/* ----------------------------------------- */
+  background-color: white;
+  border-radius: 1.3vh;
+  cursor: pointer;
+  border: transparent;
+  box-shadow: 0.1vw 0.3vh 0.4vw 0.1vw rgba(0, 0, 0, 0.2);
     }
     
     #pes {
